2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs:
	* BacktraceWrapper.cs:
	* EvaluationContext.cs:
	* MdbObjectValueAdaptor.cs: Improve implementation of
	  catchpoints. Properly report the catchpoint exception.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Track api changes.

2010-02-22  Mike Krüger  <mkrueger@novell.com>

	* MdbObjectValueAdaptor.cs: fixed build.

2010-02-16  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Tracepoints are now printed by the
	  debugging engine.

	* Mono.Debugging.Server.Mdb.csproj: Flush.

2009-12-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Improved ToString method for
	  primitive and class types. Improved Cast method. Allow
	  casting between primitive types and enums. Removed a bunch
	  of formatting code, now reused from the base
	  ObjectValueAdapter. In GetRealObject, don't dereference enum
	  types: we want to get the enum value and dereference only
	  when necessary. Other misc fixes.

	* FieldReference.cs: Allow getting fields from enums and other
	  non-struct types.

	* IndexerValueReference.cs: Added special case for string
	  indexer.

2009-12-14  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Don't try to change breakpoints if the
	  target already exited.

2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs:
	* MdbObjectValueAdaptor.cs: Track api changes.

2009-12-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Track api changes.

2009-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* FieldReference.cs:
	* PropertyReference.cs:
	* MdbObjectValueAdaptor.cs: Implement new members. Properly
	  set the Global flag for static fields and properties.

2009-11-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Convert.cs: Improve conversion of corlib types.

2009-11-19  Lluis Sanchez Gual  <lluis@novell.com>

	* BacktraceWrapper.cs: Subclass BaseBacktrace and reuse some