@@ -1,3 +1,8 @@
+2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* IndexerValueReference.cs:
+	* MdbObjectValueAdaptor.cs: Track api changes.
+
 2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* DebuggerServer.cs:
